<resources>
    <string name="app_name">ProximitySensorFix</string>

    <string name="dummy_button">UNLOCK NOW</string>
    <string name="dummy_content">SCREEN LOCKED</string>
    <string name="title_activity_main" translatable="false">Call Proximity Sensor Fix</string>
    <!-- Strings used for fragments for navigation -->

    <string name="opened">Opened</string>
    <string name="blocked">Blocked</string>
    <string name="admin_description">This app need admin permission to block screen during calls</string>
    <string name="i_ve_created_this_simple_app_because_my_xiaomi_redmi_note8t_has_some_bug_during_call_and_my_face_close_the_call_or_mute_the_mic_accidentally_nhope_you_will_like_nno_root_needed">I\'ve created this simple app because my Xiaomi Redmi has some bug during call and my face close the call or mute the mic accidentally.\nHope you will like.\nNo root needed</string>
    <string name="this_app_need_some_extra_permission_to_lock_the_screen_and_prevent_this_annoying_issue">This app need some extra permission to lock the screen and prevent this annoying issue.</string>
    <string name="allow_permission_and_start_service">ALLOW PERMISSION AND START SENSOR FIX</string>
    <string name="if_you_don_t_want_the_notification_fixed_in_status_bar_long_press_on_it_and_disable_the_notification_the_app_will_continue_work">If you don\'t want the notification fixed in status bar long press on it and disable the notification. The app will continue work</string>
    <string name="welcome">Welcome</string>
    <string name="permission_needed">Sadly for Android security, this app will not work without this permission. As seen in the allow screen we only use block screen feature</string>
    <string name="no_permission_given">I don\'t want give permission</string>
    <string name="all_will_not_work">Double check you conceed required permission</string>
    <string name="permission_gived">Permission already granted</string>
    <string name="donate">DONATE</string>
    <string name="if_you_liked_donate">If you liked this app, please donate me a coffee</string>
    <string name="enable_avvio_automatico_description">You need to enable autostart permission</string>
    <string name="enable_avvio_automatico">Enable AutoStart</string>
    <string name="title_activity_permissions">PermissionsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="concedi_permesso">Grant permission</string>
    <string name="state_telephone">Grant permission to access the state of the phone and find out if it is on the phone</string>
    <string name="use_also_the_light_sensor">Use also the Light Sensor</string>
    <string name="use_also_the_light_sensor_description">Check this box if you want to use also the Light Sensor to detect the ear near the phone</string>
    <string name="uninstall_app">Uninstall app</string>
    <string name="reviewApp">Review app</string>
    <string name="uninstall_app_description">To uninstall the app you have to remove Administration Permission before</string>
    <string name="retry">Retry</string>
    <string name="disable_battery_optimization">Disable MIUI battery optimization to prevent the app is closed from OS</string>
    <string name="accessibility_service_text" translatable="false">WaveUp Lock Command</string>
    <string name="accesibilty_description" >This app need accessibility permission to block screen during call, select ProximitySensorFix from the list and enable Accessibility features</string>
    <string name="annulla">Not Now</string>
    <string name="use_admin">Use Administration mode instead of Accessibility</string>
    <string name="use_admin_disclaimer">Some devices works better with Administration mode and others can\'t unlock screen with fingerprint</string>
</resources>
