<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/background_light"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:scaleType="centerInside"
            android:src="@drawable/appico"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_ve_created_this_simple_app_because_my_xiaomi_redmi_note8t_has_some_bug_during_call_and_my_face_close_the_call_or_mute_the_mic_accidentally_nhope_you_will_like_nno_root_needed"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/this_app_need_some_extra_permission_to_lock_the_screen_and_prevent_this_annoying_issue"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/buttonPermission"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/allow_permission_and_start_service"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"

            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:text="@string/use_also_the_light_sensor_description"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:id="@+id/use_light"
            android:text="@string/use_also_the_light_sensor"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:textSize="12sp"
            android:id="@+id/disclaimerAdmin"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:text="@string/use_admin_disclaimer"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:id="@+id/use_admin"
            android:visibility="gone"
            android:text="@string/use_admin"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/uninstallButton"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:visibility="gone"
            android:text="@string/uninstall_app_description"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    </ScrollView>
</LinearLayout>